--- a/med-website/src/app/picture-switch/picture-switch.component.scss
+++ b/med-website/src/app/picture-switch/picture-switch.component.scss
@@ -43,7 +43,7 @@ mat-card-header {
     font-weight: 500;
     margin-bottom: 0;
     text-align: center;
-    margin-left: 4rem;
+    margin-left: 5rem;
 }
 
 mat-card-content {
@@ -54,6 +54,15 @@ mat-card-content {
     justify-content: center; 
     text-align: center;
     padding: 1rem;
+
+}
+
+.picture-box {
+     background: $primary-color;
+    color: white;
+    margin-top: 4rem;
+    max-width: 80%;
+    width: 31.2rem;
 
 }
 
@@ -123,28 +132,6 @@ mat-card-content {
 //     font-weight: 400;
 //     line-height: normal;
 // }
-
-
-.picture-box {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: flex-start; 
-
-    background: $primary-color;
-    color: white;
-    width: 30.2rem;
-    height: 30.2rem;
-    margin-top: 4rem;
-
-}
-
-img {
-    border-radius: 1.25rem 1.25rem 0 0;
-    width: 30.2rem;
-    height: 30.2rem;
-    max-height: 50%;
-    object-fit: cover;
-}
 
 @media screen and (min-width: 1500px) {
     mat-card-header {
